# test_gstreamer

./: .gitignore  README.md  TODO  commandes.txt  receiver.sh  sender.sh  sender_img.sh
example_cpp/: CMakeLists.txt  client.cpp  client_tcp.cpp  server.cpp  server_tcp.cpp
left/: rename.sh
